@@ -1,0 +1,107 @@
+<!SGML  "ISO 8879:1986"
+  -- ...................................................................... --
+  -- this is a modified version of the DocBook SGML declaration 4.1  --
+  -- NAMELEN has been bumped from 44 to 256                          --
+  -- file gtk-doc.dcl ..................................................... --
+
+CHARSET
+
+	BASESET
+  "ISO 646:1983//CHARSET International Reference Version (IRV)//ESC 2/5 4/0"
+	DESCSET
+                    0   9   UNUSED
+                    9   2     9
+                   11   2   UNUSED
+                   13   1    13
+                   14  18   UNUSED
+                   32  95    32
+                  127   1   UNUSED
+
+	BASESET 
+  "ISO Registration Number 100//CHARSET ECMA-94 Right Part of Latin Alphabet Nr. 1//ESC 2/13 4/1"
+	DESCSET  
+                  128  32   UNUSED
+                  160  96   32
+
+CAPACITY SGMLREF
+
+	TOTALCAP 99000000
+	ATTCAP    1000000
+	ATTCHCAP  1000000
+	AVGRPCAP  1000000
+	ELEMCAP   1000000
+	ENTCAP    1000000
+	ENTCHCAP  1000000
+	GRPCAP    1000000
+	IDCAP    32000000
+	IDREFCAP 32000000
+  
+SCOPE DOCUMENT
+
+SYNTAX
+
+	SHUNCHAR  CONTROLS   0   1   2   3   4   5   6   7   8   9
+                            10  11  12  13  14  15  16  17  18  19
+                            20  21  22  23  24  25  26  27  28  29
+                            30  31                     127 128 129
+                           130 131 132 133 134 135 136 137 138 139
+                           140 141 142 143 144 145 146 147 148 149
+                           150 151 152 153 154 155 156 157 158 159
+
+	BASESET
+  "ISO 646:1983//CHARSET International Reference Version (IRV)//ESC 2/5 4/0"
+	DESCSET
+                  0   128   0
+
+	FUNCTION
+		RE          13
+		RS          10
+		SPACE       32
+		TAB SEPCHAR  9
+
+	NAMING
+		LCNMSTRT ""
+		UCNMSTRT ""
+		LCNMCHAR ".-_"
+		UCNMCHAR ".-_"
+		NAMECASE
+			GENERAL YES
+			ENTITY  NO
+
+	DELIM
+		GENERAL  SGMLREF
+		SHORTREF SGMLREF
+
+	NAMES SGMLREF
+
+	QUANTITY SGMLREF
+		ATTCNT    256
+		GRPCNT    253
+		GRPGTCNT  253
+		LITLEN   8092
+		NAMELEN   256
+		TAGLVL    100
+
+FEATURES
+
+         MINIMIZE
+                  DATATAG  NO
+                  OMITTAG  NO
+                  RANK     NO
+                  SHORTTAG YES 
+
+         LINK
+                  SIMPLE   NO
+                  IMPLICIT NO
+                  EXPLICIT NO
+
+         OTHER
+                  CONCUR   NO
+                  SUBDOC   NO
+                  FORMAL   YES
+
+APPINFO NONE
+
+  -- End of DocBook SGML declaration V4.1 ................................. --
+  -- ...................................................................... --
+>
