@@ -1,3 +1,9 @@
+Wed Nov 21 16:00:45 2001  Owen Taylor  <otaylor@redhat.com>
+
+	* Applied patch from Matthias Clasen to use a modified
+	.dcl file with the 44 character name length limit removed.
+	(#61342)
+
 2001-10-17  Damon Chaplin  <damon@ximian.com>
 
 	* gtkdoc-mkdb.in: applied patch from Matthias Clasen
